--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -35,3 +35,9 @@
       }
     
   }
+  
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+  }
